Modificado el URI en .env

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT = 3000
-URI = mongodb+srv://arrayz-code:Anedarlo123@cluster0.1daixnl.mongodb.net/Angel-SPA
+URI = mongodb+srv://arrayz-code:Anedarlo123@cluster0.t5udzwe.mongodb.net/Angel-SPA
 SECRETTK = TokenSecret
 ADMIN_ID = 643212eadb112bea4a6cd2a0
 ADMIN_USERNAME = AngelSPA
